🐛 Weird horizontal scroll fixed!

--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -10,7 +10,8 @@ body {
 
   .global-container {
     position: relative;
-    width: 100%;
+    width: 100vw;
+    overflow-x: hidden;
     height: 100vh;
 
     .home {
